# dirac-hashes

./: .codecov.yml  .gitignore  404.html  MANIFEST.in  README.md  benchmark.py  benchmark_comparison.py  benchmark_simple.py  demo.py  demo_lamport.py  deploy.sh  docker-compose.yml  index.html  install.py  package.json  public_key.txt  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run_api_direct.py  run_frontend_direct.py  server.js  setup.cfg  setup.py  simple_api_test.py  simple_test.py  test_api.py  test_install.py  test_optimized.py  test_working_apis.py  vercel.json  verify_install.py
.cursor/rules/: build.mdc
.github/workflows/: README.md  publish.yml  test.yml  version.yml
api/: test_api.py
api/models/: __init__.py  hash_models.py  kem_models.py  signature_models.py
api/routes/: kem_routes.py  signature_routes.py
api/utils/: __init__.py
benchmark_results/: benchmark_results.json
deployment/: .dockerignore  Dockerfile  README.md  deploy.sh  docker-compose.yml
docs/: PUBLISHING.md
frontend/: hash-test.html  index.html
frontend/css/: styles.css
frontend/js/: hash-test.js  main.js
info/: BUGFIX_REPORT.md  ENHANCEMENT_PLAN.md  IMPROVEMENTS.md  LAMPORT_IMPLEMENTATION.md  NEXT_STEPS.md  OVERVIEW.md  PROGRESS_SUMMARY.md  README.md  SUMMARY.md
src/dirac_hashes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/quantum_hash/: __init__.py  dirac.py
src/quantum_hash/core/: grover.py  shor.py  simd_optimized.py
src/quantum_hash/signatures/: __init__.py  dilithium.py  kyber.py  lamport.py  sphincs.py
src/quantum_hash/tests/: test_basic.py
src/quantum_hash/utils/: hash.py  keys.py
tests/: __init__.py  test_lamport.py  test_optimized.py
tests/debug/: __init__.py  debug_dilithium_sign.py  debug_kem.py  debug_signatures.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_dilithium_api.py  test_signature_api.py
tools/: README.md  benchmark.py  demo.py
web/: README.md  render.yaml  run_api.py  serve_frontend.py
web/api/: README.md  main.py
web/api/models/: hash_models.py  kem_models.py  signature_models.py
web/api/routes/: __init__.py  hash_routes.py  kem_routes.py  signature_routes.py
web/frontend/: documentation.html  hash-test.html  index.html  test-compare.html
web/frontend/css/: hash-test.css  main.css  styles.css
web/frontend/html/: hash-test.html
web/frontend/js/: app.js  hash-test.js  main.js
