[metadata]
name = dirac-hashes
version = attr: quantum_hash.__version__
description = Quantum-Resistant Cryptographic Hash Functions
long_description = file: README.md
long_description_content_type = text/markdown
author = Quantum Hash Team
author_email = example@example.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: C
    Topic :: Security :: Cryptography
keywords = cryptography, post-quantum, hash-functions, signatures
url = https://github.com/yourusername/dirac-hashes
project_urls =
    Bug Reports = https://github.com/mk0dz/dirac-hashes/issues
    Source = https://github.com/mk0dz/dirac-hashes
    Documentation = https://dirac-hashes.vercel.app/

[options]
python_requires = >=3.7
install_requires =
    numpy>=1.18.0
    scipy>=1.4.0
    numba>=0.50.0

[bdist_wheel]
universal = 0 